Dark mode fix and fixing and refactoring header tests

--- a/src/components/Header/ProjectName.scss
+++ b/src/components/Header/ProjectName.scss
@@ -30,6 +30,8 @@
 
 .project-name__input {
   border-radius: 5px;
+  background-color: inherit;
+  color: inherit;
 
   &:focus-visible {
     border: none;
